# verve

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  ObjectAccess.ipynb  README.md  pyproject.toml  setup.py
doc/: 0001-pipeline.md
tne/: TNE.py
