[tool.poetry]
name = "verve"
version = "0.1.0"
description = ""
authors = [
    "Lucas Hahn <lucas@tne.ai>",
    "Rakuto Furutani <rakuto@tne.ai>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.1.1"
pytest-sugar = "^1.0.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.black]
line-length = 88
target-version = ['py311']

