name = "verve"
version = "0.1.0"
description = ""
authors = [
    "Lucas Hahn <lucas@tne.ai>",
    "Rakuto Furutani <rakuto@tne.ai>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.0"
Pillow = "^10.3.0"
PyYAML = "^6.0.1"
openpyxl = "3.1.5"
python-pptx = "^0.6.21"
python-docx = "^0.8.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.black]
line-length = 88
target-version = ['py311']

